Add Contact APIs & role USER -> EMPLOYEE